# macropad-gui

./: .gitattributes  .gitignore  CLAUDE.md  README.md  launch_macropad_gui.bat  pyproject.toml
.github/workflows/: ci.yml
packaging/: build_windows.ps1  entrypoint.py  macropad_gui.spec  version_info.txt
specs/001-macropad-config-gui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-macropad-config-gui/checklists/: requirements.md
specs/001-macropad-config-gui/contracts/: yaml-config.md
src/macropad_gui/: __main__.py  _paths.py  _version.py  actions.py  cli_bridge.py  model.py  yaml_io.py
src/macropad_gui/ui/: action_editor.py  main_window.py  pad_view.py
tests/: conftest.py  test_actions.py  test_cli_bridge.py  test_model.py  test_yaml_io.py
