[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "macropad-gui"
version = "0.1.0"
description = "A Tkinter GUI for creating and editing ch57x-keyboard-tool macropad configuration files."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Toni Sins", email = "survivalracer@gmail.com" },
]
dependencies = [
    "ruamel.yaml>=0.18",
]

[project.urls]
Homepage = "https://github.com/Toni19944/macropad-gui"
Repository = "https://github.com/Toni19944/macropad-gui"

[project.scripts]
macropad-gui = "macropad_gui.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pyinstaller>=6"]

[tool.setuptools.packages.find]
where = ["src"]
